# auto-compact

./: README.md  pyproject.toml
auto_compact/: __init__.py  __main__.py  cli.py  compact.py  config.py  filters.py  tokens.py
